[package]
name = "atomicwriter"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"

[lib]
name = "_impl"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
pyo3 = { version = "0.27.1", features = [
    "extension-module",
    "generate-import-lib",
] }
tempfile = "3.23.0"

[features]
abi3 = ["pyo3/abi3"]
