[package]
name = "atomicwriter"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"

[lib]
name = "_impl"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
pyo3 = { version = "0.28.3", features = [
    "extension-module",
    "generate-import-lib",
] }
tempfile = "3.27.0"

[features]
abi3 = ["pyo3/abi3"]
