[package]
name = "atomicwriter"
version = "0.0.0"
edition = "2024"
rust-version = "1.96"

[lib]
name = "_impl"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
pyo3 = { version = "0.28.3", features = [
    "abi3-py310",
    "generate-import-lib",
] }
tempfile = "3.27.0"
